2020-11-09  Jacob Bachmeyer  <jcb@gnu.org>

	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* Makefile.in: Regenerate.

	* configure.ac: Revert development version branch tagging hook.
	* Makefile.am: Likewise.

	These caused failures (reported in PR44462 as a secondary issue)
	when a source tree is copied out of a Git directory.

2020-08-31  Jacob Bachmeyer  <jcb@gnu.org>

	* doc/runtest.1: Add brief GFDL notice.  License notice in the
	formatted manpage should now describe DejaGnu as a whole.

	* NEWS: Prepare for release.

2020-08-18  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/runtest.libs/testsuite_file.test: Add missing
	copyright and GPL notice.
	* testsuite/runtest.libs/testsuite_can.test: Likewise.
	* testsuite/runtest.libs/testcase_group.test: Likewise.

2020-08-12  Jacob Bachmeyer  <jcb@gnu.org>

	* doc/dejagnu.texi (The dejagnu_h header file): Remove node.
	(Running unit tests): Add node.
	(DejaGnu unit test protocol): Add node.
	(C unit testing API): Update to reflect current API.  Move mention
	of dejagnu.h header here in preparation for future expanded
	language support.
	(C++ unit testing API): Likewise.  Mention caveat that the C unit
	test API is also available in C++ programs.

2020-08-10  Jacob Bachmeyer  <jcb@gnu.org>

	* baseboards/qemu.exp: Tidy whitespace.

2020-08-10  Jacob Bachmeyer  <jcb@gnu.org>

	Merge patch from Kito Cheng to add support for RISC-V sim target.

	* baseboards/riscv-sim.exp: New file.
	* Makefile.am (baseboard_DATA): Add riscv-sim.exp.
	* Makefile.in (baseboard_DATA): Likewise.

2020-08-02  Jacob Bachmeyer  <jcb@gnu.org>

	* Makefile.am (TESTSUITE_FILES): Add files that were introduced
	during development but were mistakenly not added at that time.
	(baseboard_DATA): Sort baseboard file list.
	(baseboard_DATA): Add missing files.
	(dejagnu_TEXINFOS): New; add GNU FDL file.
	(CONTRIB): Add experimental Python unit test module.

	* Makefile.in (TESTSUITE_FILES): Likewise.
	(baseboard_DATA): Likewise.
