@@ -75,6 +75,14 @@ proc try_dejagnu_launcher { launcher test } {
     }
 }
 
+proc link_dejagnu_launcher_test_item {link target} {
+    verbose -log "linking $link"
+    verbose -log "     to $target"
+    if {[catch {file link -symbolic $link $target} err]} {
+	perror $err 0
+    }
+}
+
 proc run_dejagnu_launcher_tests { launcher tests } {
     foreach test $tests {
 	if { [lindex $test 0] == "#" } {
