@@ -1,3 +1,10 @@
+2020-11-10  Jacob Bachmeyer  <jcb@gnu.org>
+
+	* testsuite/lib/launcher.exp (link_dejagnu_launcher_test_item):
+	New procedure to collect existing repeated testsuite code.
+	* testsuite/launcher.all/command.exp: Establish testing
+	environment using link_dejagnu_launcher_test_item procedure.
+
 2020-11-09  Jacob Bachmeyer  <jcb@gnu.org>
 
 	* aclocal.m4: Regenerate.
